@@ -9,6 +9,10 @@
    - markus@cvs.openbsd.org 2001/04/15 16:58:03
      [authfile.c ssh-keygen.c sshd.c]
      don't use errno for key_{load,save}_private; discussion w/ solar@openwall
+   - markus@cvs.openbsd.org 2001/04/15 17:16:00
+     [clientloop.c]
+     set stdin/out/err to nonblocking in SSH proto 1, too. suggested by ho@
+     should fix some of the blocking problems for rsync over SSH-1
  - (djm) Convert mandoc manpages to man automatically. Patch from Mark D.
    Roth <roth+openssh@feep.net>
 
@@ -5096,4 +5100,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1120 2001/04/16 02:00:02 mouring Exp $
+$Id: ChangeLog,v 1.1121 2001/04/16 02:01:25 mouring Exp $
